Change toolchain from eabi to gnueabihf

--- a/configs/buildroot-2023-rc2.config
+++ b/configs/buildroot-2023-rc2.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2023.02-rc2 Configuration
+# Buildroot 2023.02-rc2-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -13,7 +13,6 @@ BR2_HOST_GCC_AT_LEAST_9=y
 #
 # Target options
 #
-BR2_SOFT_FLOAT=y
 BR2_USE_MMU=y
 # BR2_arcle is not set
 # BR2_arceb is not set
@@ -50,7 +49,8 @@ BR2_NORMALIZED_ARCH="arm"
 BR2_ENDIAN="LITTLE"
 BR2_GCC_TARGET_ABI="aapcs-linux"
 BR2_GCC_TARGET_CPU="cortex-a72"
-BR2_GCC_TARGET_FLOAT_ABI="soft"
+BR2_GCC_TARGET_FPU="neon-vfpv4"
+BR2_GCC_TARGET_FLOAT_ABI="hard"
 BR2_GCC_TARGET_MODE="arm"
 BR2_BINFMT_SUPPORTS_SHARED=y
 BR2_READELF_ARCH_NAME="ARM"
@@ -138,16 +138,15 @@ BR2_cortex_a72=y
 #
 # armv8.4a cores
 #
-BR2_ARM_EABI=y
-# BR2_ARM_EABIHF is not set
-BR2_ARM_SOFT_FLOAT=y
+# BR2_ARM_EABI is not set
+BR2_ARM_EABIHF=y
 # BR2_ARM_FPU_VFPV2 is not set
 # BR2_ARM_FPU_VFPV3 is not set
 # BR2_ARM_FPU_VFPV3D16 is not set
 # BR2_ARM_FPU_VFPV4 is not set
 # BR2_ARM_FPU_VFPV4D16 is not set
 # BR2_ARM_FPU_NEON is not set
-# BR2_ARM_FPU_NEON_VFPV4 is not set
+BR2_ARM_FPU_NEON_VFPV4=y
 # BR2_ARM_FPU_FP_ARMV8 is not set
 # BR2_ARM_FPU_NEON_FP_ARMV8 is not set
 BR2_ARM_INSTRUCTIONS_ARM=y
@@ -750,6 +749,7 @@ BR2_PACKAGE_GDB_ARCH_SUPPORTS=y
 # BR2_PACKAGE_GDB is not set
 BR2_PACKAGE_GOOGLE_BREAKPAD_ARCH_SUPPORTS=y
 # BR2_PACKAGE_GOOGLE_BREAKPAD is not set
+# BR2_PACKAGE_HYPERFINE is not set
 # BR2_PACKAGE_IOZONE is not set
 # BR2_PACKAGE_KEXEC is not set
 # BR2_PACKAGE_KMEMD is not set
@@ -831,6 +831,7 @@ BR2_PACKAGE_PROVIDES_HOST_GETTEXT="host-gettext-tiny"
 # BR2_PACKAGE_MAKE is not set
 # BR2_PACKAGE_MAWK is not set
 # BR2_PACKAGE_PKGCONF is not set
+# BR2_PACKAGE_RIPGREP is not set
 # BR2_PACKAGE_SUBVERSION is not set
 # BR2_PACKAGE_TREE is not set
 
@@ -847,6 +848,7 @@ BR2_PACKAGE_PROVIDES_HOST_GETTEXT="host-gettext-tiny"
 # BR2_PACKAGE_CURLFTPFS is not set
 # BR2_PACKAGE_DAVFS2 is not set
 # BR2_PACKAGE_DOSFSTOOLS is not set
+# BR2_PACKAGE_DUST is not set
 # BR2_PACKAGE_E2FSPROGS is not set
 # BR2_PACKAGE_E2TOOLS is not set
 # BR2_PACKAGE_ECRYPTFS_UTILS is not set
@@ -1181,10 +1183,7 @@ BR2_PACKAGE_FLASHROM_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LUKSMETA is not set
 # BR2_PACKAGE_LVM2 is not set
 # BR2_PACKAGE_MALI_DRIVER is not set
-
-#
-# mali-t76x needs a glibc toolchain with armhf enabled
-#
+# BR2_PACKAGE_MALI_T76X is not set
 # BR2_PACKAGE_MBPFAN is not set
 # BR2_PACKAGE_MDADM is not set
 # BR2_PACKAGE_MDEVD is not set
@@ -1220,6 +1219,7 @@ BR2_PACKAGE_MINICOM=y
 # BR2_PACKAGE_RDMA_CORE is not set
 # BR2_PACKAGE_READ_EDID is not set
 # BR2_PACKAGE_RNG_TOOLS is not set
+# BR2_PACKAGE_ROCKCHIP_MALI is not set
 # BR2_PACKAGE_RPI_USERLAND is not set
 # BR2_PACKAGE_RS485CONF is not set
 # BR2_PACKAGE_RTC_TOOLS is not set
@@ -1248,10 +1248,7 @@ BR2_PACKAGE_SETSERIAL=y
 # BR2_PACKAGE_STATSERIAL is not set
 # BR2_PACKAGE_STM32FLASH is not set
 # BR2_PACKAGE_SUNXI_CEDARX is not set
-
-#
-# sunxi-mali-utgard needs an EABIhf glibc toolchain
-#
+# BR2_PACKAGE_SUNXI_MALI_UTGARD is not set
 # BR2_PACKAGE_SYSSTAT is not set
 
 #
@@ -1332,10 +1329,6 @@ BR2_PACKAGE_OPENJDK_ARCH_SUPPORTS=y
 
 #
 # openjdk needs X.Org
-#
-
-#
-# openjdk does not support soft float configurations
 #
 # BR2_PACKAGE_PERL is not set
 BR2_PACKAGE_PHP_ARCH_SUPPORTS=y
@@ -1611,6 +1604,7 @@ BR2_PACKAGE_JPEG_SIMD_SUPPORT=y
 # BR2_PACKAGE_LIBPNG is not set
 # BR2_PACKAGE_LIBQRENCODE is not set
 # BR2_PACKAGE_LIBRAW is not set
+# BR2_PACKAGE_LIBRSVG is not set
 # BR2_PACKAGE_LIBSVG is not set
 # BR2_PACKAGE_LIBSVG_CAIRO is not set
 # BR2_PACKAGE_LIBSVGTINY is not set
@@ -1721,6 +1715,8 @@ BR2_PACKAGE_GNU_EFI_ARCH_SUPPORTS=y
 BR2_PACKAGE_MRAA_ARCH_SUPPORTS=y
 # BR2_PACKAGE_MRAA is not set
 # BR2_PACKAGE_MTDEV is not set
+BR2_PACKAGE_NE10_ARCH_SUPPORTS=y
+# BR2_PACKAGE_NE10 is not set
 # BR2_PACKAGE_NEARDAL is not set
 # BR2_PACKAGE_OPENSC is not set
 # BR2_PACKAGE_OWFS is not set
@@ -2501,6 +2497,7 @@ BR2_PACKAGE_RPCBIND=y
 # BR2_PACKAGE_SSLH is not set
 # BR2_PACKAGE_STRONGSWAN is not set
 # BR2_PACKAGE_STUNNEL is not set
+# BR2_PACKAGE_SURICATA is not set
 # BR2_PACKAGE_TCPDUMP is not set
 # BR2_PACKAGE_TCPING is not set
 # BR2_PACKAGE_TCPREPLAY is not set
@@ -2769,6 +2766,7 @@ BR2_PACKAGE_MAKEDUMPFILE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_SWUPDATE is not set
 BR2_PACKAGE_SYSTEMD_ARCH_SUPPORTS=y
 BR2_PACKAGE_SYSTEMD_BOOTCHART_ARCH_SUPPORTS=y
+# BR2_PACKAGE_TEALDEER is not set
 # BR2_PACKAGE_TPM_TOOLS is not set
 # BR2_PACKAGE_TPM2_ABRMD is not set
 # BR2_PACKAGE_TPM2_TOOLS is not set
@@ -2848,6 +2846,7 @@ BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
 #
 # Text editors and viewers
 #
+# BR2_PACKAGE_BAT is not set
 # BR2_PACKAGE_ED is not set
 # BR2_PACKAGE_JOE is not set
 # BR2_PACKAGE_MC is not set
@@ -3051,8 +3050,10 @@ BR2_PACKAGE_HOST_RASPBERRYPI_USBBOOT=y
 # BR2_PACKAGE_HOST_RISCV_ISA_SIM is not set
 # BR2_PACKAGE_HOST_RUNC is not set
 BR2_PACKAGE_HOST_RUSTC_ARCH_SUPPORTS=y
+BR2_PACKAGE_HOST_RUSTC_TARGET_TIER2_HOST_TOOLS_PLATFORMS=y
+BR2_PACKAGE_HOST_RUSTC_TARGET_ARCH_SUPPORTS=y
 BR2_PACKAGE_HOST_RUSTC_ARCH="armv7"
-BR2_PACKAGE_HOST_RUSTC_ABI="eabi"
+BR2_PACKAGE_HOST_RUSTC_ABI="eabihf"
 # BR2_PACKAGE_HOST_RUSTC is not set
 BR2_PACKAGE_PROVIDES_HOST_RUSTC="host-rust-bin"
 # BR2_PACKAGE_HOST_SAM_BA is not set
